--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <button id="play">PLAY</button>
         </div>
         
+        <h1 id="points">0</h1>
+        <h3 id="lose">Hai perso!</h3>
+        <h3 id="win">Hai vinto!</h3>
+
         <div class="grid">
             
         </div>
